add download function

--- a/static/index.html
+++ b/static/index.html
@@ -31,6 +31,11 @@
                     <br>
                     <div id="sentence2">你这个<input id="word2" type="text" placeholder="小画家"></div>
                 </div>
+                <div>
+                    <a id="download-link" href="" download="">
+                        <button id="download-btn" class="btn btn-default">点击下载</button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
